# poetry-entrypoints

./: .gitignore  LICENSE  README.md  pyproject.toml
entrypoints/: __main__.py
entrypoints/plugins/: abc.py  plugin2.py
