[tool.poetry]
name = "entrypoints"
version = "0.1.0"
description = ""
authors = ["Stephan Druskat <stephan.druskat@dlr.de>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."entrypoints.plugins"]
plugin1 = "entrypoints.plugins.plugin1:Plugin"
plugin2 = "entrypoints.plugins.plugin2:Plugin"
